--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "lodash": ">=4.17.15",
     "nodemon": ">=2.0.2",
     "react": ">=16.12.0",
-    "react-dom": ">=16.12.0"
+    "react-dom": ">=16.12.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
