--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "css-loader": "^3.4.2",
     "style-loader": "^1.1.3",
     "webpack": ">=4.41.5",
