--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": ">=2.8.5",
     "express": ">=4.17.1",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "jquery": ">=3.4.1",
     "lodash": ">=4.17.15",
     "nodemon": ">=2.0.2",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "css-loader": "^3.4.2",
+    "html-loader": "^4.2.0",
     "style-loader": "^1.1.3",
     "webpack": ">=4.41.5",
     "webpack-cli": ">=3.3.10"
